Můžeme použít List.of(), už jsme v Javě 11.